# qsl_problem_2

./: .env.sample  docker-compose.yml
backend/: .gitignore  build.sh  manage.py  pyproject.toml  run.sh
backend/apps/api/: mixins.py  urls.py
backend/apps/common/: detect.py  enums.py  models.py  permissions.py  services.py
backend/apps/errors/: apis.py  services.py
backend/apps/files/: admin.py  apis.py  models.py  services.py  urls.py
backend/apps/integrations/aws/: client.py
backend/apps/product/: admin.py  apis.py  filters.py  models.py  selectors.py  urls.py
backend/settings/: asgi.py  env.py  urls.py  wsgi.py
backend/settings/django/: base.py  production.py  render.py
backend/settings/others/: drf.py  files_and_storages.py  sentry.py  sessions.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.jsx
frontend/src/components/Products/: Products.jsx
